adding image online

--- a/resumestyle.css
+++ b/resumestyle.css
@@ -10,7 +10,7 @@ body
 	background-size: cover;
 	background-position: center;
 	height: 65vh;
-	background-image: url(notebook.PNG);
+	background-image: url(https://store.storeimages.cdn-apple.com/4982/as-images.apple.com/is/macbook-air-og-202011?wid=1200&hei=630&fmt=jpeg&qlt=95&.v=1604278672000);
 	background-attachment: fixed;
 }
 /*Section class*/
